--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "start:zh": "npm run start -- --locale zh-CN",
-    "build": "docusaurus build",
+    "build": "docusaurus build --out-dir dist",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
-    "serve": "docusaurus serve",
+    "serve": "docusaurus serve --dir dist",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
